Added:Animated Navbar

--- a/animated-countdown/index.html
+++ b/animated-countdown/index.html
@@ -25,7 +25,7 @@
             <span>Replay</span>
         </button>
     </div>
-    <script src="./style.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
